// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputLabel /> should render a label 1`] = `
.c0 {
  color: #667380;
  font-size: 14px;
  line-height: 20px;
}

<InputLabel
  isRequired={false}
>
  <styled.label
    isRequired={false}
  >
    <label
      className="c0"
    >
      Test input label
    </label>
  </styled.label>
</InputLabel>
`;

exports[`<InputLabel /> should render a label with a 'for' attribute 1`] = `
.c0 {
  color: #667380;
  font-size: 14px;
  line-height: 20px;
}

<InputLabel
  htmlFor="input-id"
  isRequired={false}
>
  <styled.label
    htmlFor="input-id"
    isRequired={false}
  >
    <label
      className="c0"
      htmlFor="input-id"
    >
      Test input label
    </label>
  </styled.label>
</InputLabel>
`;

exports[`<InputLabel /> should render a label with a required marker 1`] = `
.c0 {
  color: #667380;
  font-size: 14px;
  line-height: 20px;
}

.c0::after {
  color: #C5CED6;
  content: ' - required';
  font-size: 14px;
  font-style: italic;
}

<InputLabel
  isRequired={true}
>
  <styled.label
    isRequired={true}
  >
    <label
      className="c0"
    >
      Test input label
    </label>
  </styled.label>
</InputLabel>
`;
